--- a/index.html
+++ b/index.html
@@ -216,12 +216,8 @@ $(function()
    &lt;li&gt;
       &lt;div&gt;Whatever you want here&lt;/div&gt;
       &lt;ul&gt;
-         &lt;li&gt;
-            &lt;div&gt;Nested list item&lt;/div&gt;
-         &lt;/li&gt;
-         &lt;li&gt;
-            &lt;div&gt;Another item&lt;/div&gt;
-         &lt;/li&gt;
+         &lt;li&gt;&lt;div&gt;Nested list item&lt;/div&gt;&lt;/li&gt;
+         &lt;li&gt;&lt;div&gt;Another item&lt;/div&gt;&lt;/li&gt;
       &lt;/ul&gt;
    &lt;/li&gt;
 &lt;/ul&gt;</code>
