comments formatting in code tags of index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	.c1 { color:#b5e853; }
 	.c2 { color:#63c0f5; }
 	.c3 { color: #f77720; }
+	.c4 { color: #888; }
 	.bgC1 { background-color:#ccc; }
 	.bgC2 { background-color:#ff8; }
 	.small1 { font-size:0.8em; }
@@ -265,9 +266,9 @@ $(function()
 			</p>
 <pre>
 <code>var options = {
-	// Like a css class name. Class will be removed after drop.
+	<span class="c4">// Like a css class name. Class will be removed after drop.</span>
 	currElClass: 'currElemClass',
-	// or like a jQuery css object. Note that css object settings can't be removed
+	<span class="c4">// or like a jQuery css object. Note that css object settings can't be removed</span>
 	currElCss: {'background-color':'green', 'color':'#fff'}
 }</code>
 </pre>
@@ -278,7 +279,7 @@ $(function()
 <pre>
 <code>var options = {
 	placeholderClass: 'placeholderClass',
-	// or like a jQuery css object
+	<span class="c4">// or like a jQuery css object</span>
 	placeholderCss: {'background-color':'yellow'}
 }</code>
 </pre>
@@ -289,7 +290,7 @@ $(function()
 <pre>
 <code>var options = {
 	hintClass: 'hintClass',
-	// or like a jQuery css object
+	<span class="c4">// or like a jQuery css object</span>
 	hintCss: {'background-color':'green', 'border':'1px dashed white'}
 }</code>
 </pre>
@@ -304,7 +305,7 @@ $(function()
 <code>var options = {
 	listSelector: 'ol',
 	hintWrapperClass: 'hintClass',
-	// or like a jQuery css object
+	<span class="c4">// or like a jQuery css object</span>
 	hintWrapperCss: {'background-color':'green', 'border':'1px dashed white'}
 }</code>
 </pre>
@@ -319,7 +320,7 @@ $(function()
 <code>var options = {
 	listSelector: 'ol',
 	listsClass: 'listsClass',
-	// or like a jQuery css object
+	<span class="c4">// or like a jQuery css object</span>
 	listsCss: {'background-color':'silver', 'border':'1px solid white'}
 }</code>
 </pre>
@@ -372,7 +373,7 @@ $(function()
 <code>var options = {
 	complete: function(currEl)
 	{
-		// Whatever you need to do after the drop
+		<span class="c4">// Whatever you need to do after the drop</span>
 	}
 }</code>
 </pre>
