fixed bug in open/close function
Initialization had been called setting.opener.css instead of setting.opener.openerCss if opener was not defined in options obj.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					active: true,
 					close: './imgs/Remove2.png',
 					open: './imgs/Add2.png',
-					css: {
+					openerCss: {
 						'display': 'inline-block',
 						'width': '18px',
 						'height': '18px',
