--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </style>
 
 <script src="http://code.jquery.com/jquery-git1.min.js"></script>
-<script src="jquery-sortable-lists.js"></script>
+<script src="jquery-sortable-lists.min.js"></script>
 <script type="text/javascript">
 $(function()
 {
