Fixed bug in opener object
opener.css rewritten to opener.openerCss
opener.class rewritten to opener.openerClass

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						'background-position': 'center center',
 						'background-repeat': 'no-repeat'
 					},
-					class: ''
+					openerClass: ''
 				},
 				isAllowed: function(cEl, hint, target)
 				{
