--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 	.c2 { color:#63c0f5; }
 	.c3 { color: #f77720; }
 	.c4 { color: #888; }
+	.c5 { color: #666667; }
+	.c6 { color: #888; }
 	.bgC1 { background-color:#ccc; }
 	.bgC2 { background-color:#ff8; }
 	.small1 { font-size:0.8em; }
@@ -94,8 +96,23 @@ $(function()
 	$('#toStrBtn').on('click', function() { console.log($('#sTree2').sortableListsToString()); });
 	$('.descPicture').on('click', function(e) { $(this).toggleClass('descPictureClose'); });
 
-	$('.clickable').on('click', function(e)	{ alert('Click works fine!'); });
+	$('.clickable').on('click', function(e)	{ alert('Click works fine! IgnoreClass stops onDragStart event.'); });
+
+	/* Scrolling anchors */
+	$('#toPictureAnch').on('click', function(e) { scrollToAnch('pictureAnch'); return false; });
+	$('#toBaseElementAnch').on('click', function(e) { scrollToAnch('baseElementAnch'); return false; });
+	$('#toCssPatternAnch').on('click', function(e) { scrollToAnch('cssPatternAnch'); return false; });
+
+	function scrollToAnch(id)
+	{
+		$('html, body').animate({
+			scrollTop: $("#" + id).offset().top
+		}, 750);
+		return false;
+	}
+
 });
+
 </script>
 </head>
 <body>
@@ -108,6 +125,7 @@ $(function()
 			<a href="https://github.com/camohub/jquery-sortable-lists/zipball/master" class="btn">Download as .zip</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists/tarball/master" class="btn">Download as .tar.gz</a>
 			<a href="https://github.com/camohub/jquery-sortable-lists" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+			<br><b><span class="small1 c6">Or you can use: </span><span class="small1 c6">$&nbsp;bower&nbsp;install&nbsp;jquery-sortable-lists</span></b>
 		</section>
 	</div>
 </header>
@@ -115,7 +133,7 @@ $(function()
 <div class="container">
 	<section id="main_content">
 		<h2>
-			How does Sortable lists plugin work?.
+			How does Sortable lists plugin work?
 		</h2>
 <pre>
 <code>$('.sortableLists').sortableLists( options );</code>
@@ -125,7 +143,7 @@ $(function()
 				You can define the <strong class="c1">isAlowed callback</strong> which determines if dragged item can be inserted into another.
 				<strong class="c1">Insert zone</strong> like a distance which determines if item will be inserted inside or outside of the active area,
 				<strong class="c1">speed of autoscroll</strong> function. Available is <strong class="c1">onDragStart</strong> and <strong class="c1">complete callback</strong> and more.
-				For better understanding look at the <a href="#picture">picture</a> which describes all active elements in sortable lists plugin.
+				For better understanding look at the <a id="toPictureAnch" href="#picture">picture</a> which describes all active elements in sortable lists plugin.
 			</p>
 
         	<h2>
@@ -229,7 +247,7 @@ $(function()
 </pre>
 
 
-		<a name="cssPattern"></a>
+		<a name="cssPattern" id="cssPatternAnch"></a>
 		<h2 class="clear">Css pattern</h2>
 		<p>If you format li elements this way</p>
 <pre>
@@ -239,15 +257,15 @@ $(function()
 <pre>
 <code>#myList li, #sortableListsBase li { background-color:#ddf, padding-left:50px }</code>
 </pre>
-		<p>Every dragged item is appended to the base element. It ensures smooth dragging and scrolling. For more information about base element look at the picture below and at the <a href="#baseElement">Base element description</a>.</p>
+		<p>Every dragged item is appended to the base element. It ensures smooth dragging and scrolling. For more information about base element look at the picture below and at the <a id="toBaseElementAnch" href="#baseElement">Base element description</a>.</p>
 		<p>All settings are placed in object which is the only parameter of .sortableLists() function.</p>
 <pre>
 <code>$('.sortableLists').sortableLists( options );</code>
 </pre>
-		<p class="c1">That's all. Everything else is optonal.</p>
+		<p class="c1">That's all. Everything else is optional.</p>
 
 
-		<a name="picture"></a>
+		<a name="picture" id="pictureAnch"></a>
 		<h4>This pictures shows you how it works inside. Click to show.</h4>
 		<img class="descPicture descPictureClose" src="./imgs/sortable-lists.jpg">
 		<img class="descPictureClose descPicture" src="./imgs/sortable-lists2.jpg">
@@ -255,7 +273,7 @@ $(function()
 
 		<h2 class="clear">Active elements</h2>
 
-		<a name="baseElement"></a>
+		<a name="baseElement" id="baseElementAnch"></a>
 		<h3 class="c3">Base element</h3>
 		<p>Most important element. Every dragged element is appended to the base element while dragging. Sortable lists plugin adds this element in to the body at the background.
 			It is the ul/ol element with css properties: position:absolute; top:0; left:0.
@@ -273,7 +291,7 @@ $(function()
 
 		<h3 class="c3">Currently dragged element</h3>
 		<p>Is dragged element of course. You can have a little problem with the formatting this element. It caused the fact that dragged element
-			is the child of the base element during the dragging. Look at the <a href="#cssPattern" id="toCssPattern">Css pattern</a> how to solve it.
+			is the child of the base element during the dragging. Look at the <a href="#cssPattern" id="toCssPatternAnch">Css pattern</a> how to solve it.
 			Current element has class - sortableListsCurrent which helps you to format the item. You can do it also through the options object by
 			currElClass or currElCss properties. Note that classes sortableListsCurrent and currElClass will be removed after the dragging but currElCss not.
 		</p>
